# lego-schedule

./: README.md  pyproject.toml
src/schedule/: model.py
